attempting to fix mobile search bar alignment

--- a/styles.css
+++ b/styles.css
@@ -272,6 +272,7 @@ header h1 {
   border: 3px solid black;
   border-radius: 10px;
   margin: 0px auto;
+  margin-left: -20px;
   padding: 0px;
   width: 90%;
 }
